<resources>
    <string name="app_name">PentaKillClient</string>
    <string name="min_number">每日最低需寄<![CDATA[<b><font color=\'#436EEE\'>%d</font></b>]]>件</string>
    <string name="price">低至￥<![CDATA[<b><font color=\'#436EEE\' size=\"2\">%1d</font></b><br>]]>\n%.1fkg</string>
    <string name="end_time">截止日期：<![CDATA[<font color=\'#FF6532\'>%s</font>]]></string>
    <string name="requirement">使用要求</string>
    <string name="recent">最近参与</string>
    <string name="participate">已有<![CDATA[<font color=\'#FF6532\'>%d</font>]]>人参团</string>
    <string name="join_now">立即参与</string>
    <string name="load_fail">请求失败：</string>
    <string name="remaining">还差<![CDATA[<font color=\'#FF6532\'>%d</font>]]>人即可成团</string>
    <string name="weight_range">%.1fkg~%.1fkg</string>
    <string name="loading">正在努力加载中...</string>
</resources>
