<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sf.oarage.pentakillclient.StoreDetailActivity">

    <TextView
        android:id="@+id/tv_market_id"
        style="@style/font0"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="鞋服专送080901期"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <LinearLayout
            android:id="@+id/ll_top_show"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_weight_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="1.5~5kg"/>

            <TextView
                android:id="@+id/tv_min_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/min_number"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_min_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="24dp"
            android:layout_below="@+id/ll_top_show"
            android:text="@string/price"
            tools:layout_editor_absoluteX="284dp"
            tools:layout_editor_absoluteY="25dp"/>

        <ImageView
            android:id="@+id/iv_store_pic"
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ll_top_show"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="44dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:orientation="horizontal">

        <com.sf.oarage.pentakillclient.RoundedRectProgressBar
            android:id="@+id/iv_progress"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            app:backColor="#E6E6E6"
            app:barColor="#33CC99"
            app:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/tv_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/remaining"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/end_time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/requirement"/>

        <TextView
            android:id="@+id/tv_requirement"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="后台传递过来的使用要求"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/recent"/>

    <TextView
        android:id="@+id/tv_participate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:gravity="right"
        android:text="@string/participate"/>

    <Button
        android:id="@+id/btn_join"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:text="@string/join_now"/>

</LinearLayout>
